<resources>
    <string name="app_name">Roomx</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Confirm">Confirm password</string>
    <string name="name">Name</string>
    <string name="mobile">mobile Number</string>
    <string name="date">Date</string>
    <string name="tag">tagname</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="info">room info </string>
    <string name="EditAccount">Edit Account</string>
    <string name="gifts">RoomX Gifts</string>
    <string name="host">Be the Host</string>
    <string name="Invite">Invite Friends</string>
    <string name="Help">Help</string>
    <string name="save">Save</string>
    <string name="dateofbirth">BirthDay</string>
    <string name="start_booking">Start booking</string>
    <string name="End_booking">End booking</string>
    <string name="Place_bookings">Place bookings</string>

    <!--profile layout-->
    <string name="username_lable">Username</string>
    <string name="mobile_lable">Mobile</string>
    <string name="address_lable">Adress</string>
    <string name="email_lable">Email Adress</string>
    <string name="done">Done</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_reserve">Reservation</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_fav">Favorite</string>
    <string name="title_activity_my_room">ممتلكاتي</string>
    <string name="title_activity_reservation_requests">طلبات الحجز</string>
    <string name="title_activity_add_room">إضافة ممتلك</string>
    <string name="empty_list">No Data!</string>
    <string name="done_succefully">Update Profile Successfully!</string>
    <string name="question">you have an account?Login</string>
    <string name="noquestion">you do not have an account?Sign Up</string>
    <string name="Nowner"> Place Name </string>
    <string name="guests">number of guests</string>
    <string name="beds">Number of beds</string>
    <string name="bathrooms">Number of bathroom</string>
    <string name="lmap">Location on the map</string>
    <string name="lmanually">Enter the location manually based on latitude and longitude</string>
    <string name="dproperty">Description of property</string>
    <string name="deproperty">Enter the detailed descriptive of where they would like added</string>
    <string name="fproperty">Property features</string>
    <string name="tv">TV</string>
    <string name="air">Air Conditioner</string>
    <string name="kitchen">kitchen</string>
    <string name="pool">Swimming pool</string>
    <string name="net">Internet</string>
    <string name="iproperty">Images property</string>
    <string name="apictures">Click here to attach pictures</string>
    <string name="NImages">Number of the Images you have chosen</string>
    <string name="hosted_name"> %1$s المستضيف</string>
    <string name="guest">%1$s ضيوف</string>
    <string name="room">%1$s غرف</string>
    <string name="beds_parms">%1$s سرير</string>
    <string name="bthroom">%1$s دورات مياه</string>
    <string name="reserve_bt_text">Reserve</string>
    <string name="reserve_diaoge_title">Choose Date</string>
    <string name="price">السعر</string>
    <string name="error_fill_data">الرجاء تعبئة البيانات الناقصة</string>
    <string name="rooms">عدد الغرف</string>
    <string name="add_room_success">تم إضافة الغرفة بنجاح</string>
    <string name="add_room_fail">الرجاء تعبئة البيانات الناقصة</string>
    <string name="current_location">مكانك الحالي</string>
    <string name="visit_user_profile">زيارة الملف الشخصي لطالب الممتلك</string>
    <string name="accept_text">قبول</string>
    <string name="close">إغلاق</string>
    <string name="refuse_text">رفض</string>

       <string name="user_successfully_added">User successfully added!</string>
      <string name="user_unable_to_add">Unable to add user!</string>
      <string name="adding_user_to_db">Adding user to database.</string>
    <string name="be_traveller">Be Traveller</string>
    <string name="general_error">حدث خطأ ما</string>
    <string name="delete_success">تم حذف الغرفة بنجاح</string>
    <string name="delete">حذف</string>
    <string name="not_enabled">نعتذر  التطبيق لا يعمل بسبب أعطال برمجية</string>
</resources>
