<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_singn_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    tools:context="com.example.farouk.roomx.ui.main.SignUpActivity">


    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginEnd="@dimen/margin_login"
        android:layout_marginStart="@dimen/margin_login"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_Singnup_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textDirection="locale"

            />

        <EditText

            android:id="@+id/et_Singnup_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dip"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textDirection="locale" />

        <EditText

            android:id="@+id/et_Singnup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textDirection="locale" />

        <EditText

            android:id="@+id/et_Singnup_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="5dip"
            android:ems="10"
            android:hint="@string/Confirm"
            android:inputType="textPassword"
            android:textDirection="locale" />

        <EditText

            android:id="@+id/et_Singnup_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:textDirection="locale" />

        <Button
            android:id="@+id/bt_Singnup_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:onClick="Singe"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textSize="@dimen/bt_txt_size" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_Singnup_logo"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="70dp"
        android:background="@drawable/roomx" />

    <Button
        android:id="@+id/bt_sing_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@null"
        android:onClick="loginback"
        android:text="@string/question" />

</FrameLayout>
