<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_be_hostt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farouk.roomx.BeHostt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Nowner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tv_BeHost_Nowner"
            android:gravity="right"
            android:textSize="20sp"/>

        <EditText
            android:background="@drawable/edittext_background_foucused"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/Nowner"
            android:gravity="right"
            android:ems="10"
            android:id="@+id/ed_BeHost_Nowner"
            android:layout_margin="2dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bathrooms"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView7"
                android:gravity="left"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/beds"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView6"
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/guests"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView5"
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.polak.clicknumberpicker.ClickNumberPickerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:picker_corner_radius="10"
                app:decimal_number ="0"
                app:pickers_background_color="@color/colorPrimary"
                app:swipe_enabled="false"
                app:value_background_color="@color/colorPrimaryDark"
                app:value_text_color="@android:color/white"
                android:id="@+id/clickNumberPickerView1"
                android:layout_weight="1"
                android:layout_margin="8dp"/>


            <pl.polak.clicknumberpicker.ClickNumberPickerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:picker_corner_radius="10"
                app:decimal_number ="0"
                app:pickers_background_color="@color/colorPrimary"
                app:swipe_enabled="false"
                app:value_background_color="@color/colorPrimaryDark"
                app:value_text_color="@android:color/white"
                android:id="@+id/clickNumberPickerView2"
                android:layout_weight="1"
                android:layout_margin="8dp"/>


            <pl.polak.clicknumberpicker.ClickNumberPickerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:picker_corner_radius="10"
                app:decimal_number ="0"
                app:pickers_background_color="@color/colorPrimary"
                app:swipe_enabled="false"
                app:value_background_color="@color/colorPrimaryDark"
                app:value_text_color="@android:color/white"
                android:id="@+id/clickNumberPickerView3"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/mapView" />

        <TextView
            android:text="@string/lmap"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/textView8"
            android:gravity="right"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/lmanually"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/textView9"

            android:gravity="right"
            android:textSize="17sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:background="@drawable/edittext_background_foucused"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="0.0"
                android:ems="10"
                android:id="@+id/ed_BeHost_V"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:gravity="center"/>

            <EditText
                android:background="@drawable/edittext_background_foucused"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="0.0"
                android:ems="10"
                android:id="@+id/ed_BeHost_H"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:text="@string/dproperty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/textView10"
            android:gravity="right"
            android:textSize="20sp"/>

        <EditText
            android:background="@drawable/edittext_background_foucused"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/ed_BeHost_deproperty"
            android:hint="@string/deproperty"
            android:gravity="right"
            android:layout_margin="12dp"/>

        <TextView
            android:text="@string/fproperty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="right"
            android:id="@+id/textView11" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:text="@string/air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_behost_air"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

            <CheckBox
                android:text="@string/pool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_behost_pool"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                />

            <CheckBox
                android:text="@string/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_behost_tv"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <CheckBox
                android:text="@string/kitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_behost_kitchen"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

            <CheckBox
                android:text="@string/net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_behost_net"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
        </LinearLayout>

        <TextView
            android:text="@string/iproperty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:id="@+id/textView12"
            android:gravity="right"
            android:layout_weight="1" />

        <Button

            android:background="@drawable/edittext_background_foucused"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/apictures"
            android:id="@+id/bt_behost_add"
            android:drawableRight="@drawable/picture"
            android:gravity="right|center_vertical"
            android:drawablePadding="12dp"

            />

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/bt_behost_save"
            android:layout_margin="8dp"
            />


    </LinearLayout>


    </ScrollView>
</RelativeLayout>
