<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitXY"
    android:layoutDirection="locale"
    >


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_login"
        android:layout_marginEnd="@dimen/margin_login"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/root">



        <EditText

            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:drawablePadding="5dip"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/Email"
            android:gravity="right"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:drawablePadding="5dip"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/password"
            />


        <Button
            android:id="@+id/bt_login_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textSize="@dimen/bt_txt_size"
            android:textColor="@color/white"
            android:onClick="login"
            />

    </LinearLayout>
    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_marginTop="70dp"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/roomx"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/bt_login_SingnUp"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/SignUp"
            android:onClick="SingnUP"
            android:textSize="@dimen/bt_txt_size"
            android:background="@null"
            android:gravity="right"
            android:layout_marginRight="4dp"
            android:layout_weight="2" />
        <TextView
            android:text="@string/noquestion"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:id="@+id/textView3"
            android:gravity="left"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>




</FrameLayout>
